; ModuleID = '/home/carl/AnghaBench/linux/net/batman-adv/extr_netlink.c_batadv_netlink_tpmeter_notify.c'
source_filename = "/home/carl/AnghaBench/linux/net/batman-adv/extr_netlink.c_batadv_netlink_tpmeter_notify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.batadv_priv = type { i32 }
%struct.sk_buff = type { i32 }

@NLMSG_DEFAULT_SIZE = common dso_local global i32 0, align 4
@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@batadv_netlink_family = common dso_local global i32 0, align 4
@BATADV_CMD_TP_METER = common dso_local global i32 0, align 4
@ENOBUFS = common dso_local global i32 0, align 4
@BATADV_ATTR_TPMETER_COOKIE = common dso_local global i32 0, align 4
@BATADV_ATTR_TPMETER_TEST_TIME = common dso_local global i32 0, align 4
@BATADV_ATTR_TPMETER_BYTES = common dso_local global i32 0, align 4
@BATADV_ATTR_PAD = common dso_local global i32 0, align 4
@BATADV_ATTR_TPMETER_RESULT = common dso_local global i32 0, align 4
@BATADV_ATTR_ORIG_ADDRESS = common dso_local global i32 0, align 4
@ETH_ALEN = common dso_local global i32 0, align 4
@BATADV_NL_MCGRP_TPMETER = common dso_local global i32 0, align 4
@EMSGSIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @batadv_netlink_tpmeter_notify(%struct.batadv_priv* %0, i32* %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.batadv_priv*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.sk_buff*, align 8
  %15 = alloca i8*, align 8
  %16 = alloca i32, align 4
  store %struct.batadv_priv* %0, %struct.batadv_priv** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  %17 = load i32, i32* @NLMSG_DEFAULT_SIZE, align 4
  %18 = load i32, i32* @GFP_KERNEL, align 4
  %19 = call %struct.sk_buff* @nlmsg_new(i32 %17, i32 %18)
  store %struct.sk_buff* %19, %struct.sk_buff** %14, align 8
  %20 = load %struct.sk_buff*, %struct.sk_buff** %14, align 8
  %21 = icmp ne %struct.sk_buff* %20, null
  br i1 %21, label %25, label %22

22:                                               ; preds = %6
  %23 = load i32, i32* @ENOMEM, align 4
  %24 = sub nsw i32 0, %23
  store i32 %24, i32* %7, align 4
  br label %93

25:                                               ; preds = %6
  %26 = load %struct.sk_buff*, %struct.sk_buff** %14, align 8
  %27 = load i32, i32* @BATADV_CMD_TP_METER, align 4
  %28 = call i8* @genlmsg_put(%struct.sk_buff* %26, i32 0, i32 0, i32* @batadv_netlink_family, i32 0, i32 %27)
  store i8* %28, i8** %15, align 8
  %29 = load i8*, i8** %15, align 8
  %30 = icmp ne i8* %29, null
  br i1 %30, label %34, label %31

31:                                               ; preds = %25
  %32 = load i32, i32* @ENOBUFS, align 4
  %33 = sub nsw i32 0, %32
  store i32 %33, i32* %16, align 4
  br label %89

34:                                               ; preds = %25
  %35 = load %struct.sk_buff*, %struct.sk_buff** %14, align 8
  %36 = load i32, i32* @BATADV_ATTR_TPMETER_COOKIE, align 4
  %37 = load i32, i32* %13, align 4
  %38 = call i64 @nla_put_u32(%struct.sk_buff* %35, i32 %36, i32 %37)
  %39 = icmp ne i64 %38, 0
  br i1 %39, label %40, label %41

40:                                               ; preds = %34
  br label %83

41:                                               ; preds = %34
  %42 = load %struct.sk_buff*, %struct.sk_buff** %14, align 8
  %43 = load i32, i32* @BATADV_ATTR_TPMETER_TEST_TIME, align 4
  %44 = load i32, i32* %11, align 4
  %45 = call i64 @nla_put_u32(%struct.sk_buff* %42, i32 %43, i32 %44)
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %48

47:                                               ; preds = %41
  br label %83

48:                                               ; preds = %41
  %49 = load %struct.sk_buff*, %struct.sk_buff** %14, align 8
  %50 = load i32, i32* @BATADV_ATTR_TPMETER_BYTES, align 4
  %51 = load i32, i32* %12, align 4
  %52 = load i32, i32* @BATADV_ATTR_PAD, align 4
  %53 = call i64 @nla_put_u64_64bit(%struct.sk_buff* %49, i32 %50, i32 %51, i32 %52)
  %54 = icmp ne i64 %53, 0
  br i1 %54, label %55, label %56

55:                                               ; preds = %48
  br label %83

56:                                               ; preds = %48
  %57 = load %struct.sk_buff*, %struct.sk_buff** %14, align 8
  %58 = load i32, i32* @BATADV_ATTR_TPMETER_RESULT, align 4
  %59 = load i32, i32* %10, align 4
  %60 = call i64 @nla_put_u8(%struct.sk_buff* %57, i32 %58, i32 %59)
  %61 = icmp ne i64 %60, 0
  br i1 %61, label %62, label %63

62:                                               ; preds = %56
  br label %83

63:                                               ; preds = %56
  %64 = load %struct.sk_buff*, %struct.sk_buff** %14, align 8
  %65 = load i32, i32* @BATADV_ATTR_ORIG_ADDRESS, align 4
  %66 = load i32, i32* @ETH_ALEN, align 4
  %67 = load i32*, i32** %9, align 8
  %68 = call i64 @nla_put(%struct.sk_buff* %64, i32 %65, i32 %66, i32* %67)
  %69 = icmp ne i64 %68, 0
  br i1 %69, label %70, label %71

70:                                               ; preds = %63
  br label %83

71:                                               ; preds = %63
  %72 = load %struct.sk_buff*, %struct.sk_buff** %14, align 8
  %73 = load i8*, i8** %15, align 8
  %74 = call i32 @genlmsg_end(%struct.sk_buff* %72, i8* %73)
  %75 = load %struct.batadv_priv*, %struct.batadv_priv** %8, align 8
  %76 = getelementptr inbounds %struct.batadv_priv, %struct.batadv_priv* %75, i32 0, i32 0
  %77 = load i32, i32* %76, align 4
  %78 = call i32 @dev_net(i32 %77)
  %79 = load %struct.sk_buff*, %struct.sk_buff** %14, align 8
  %80 = load i32, i32* @BATADV_NL_MCGRP_TPMETER, align 4
  %81 = load i32, i32* @GFP_KERNEL, align 4
  %82 = call i32 @genlmsg_multicast_netns(i32* @batadv_netlink_family, i32 %78, %struct.sk_buff* %79, i32 0, i32 %80, i32 %81)
  store i32 0, i32* %7, align 4
  br label %93

83:                                               ; preds = %70, %62, %55, %47, %40
  %84 = load %struct.sk_buff*, %struct.sk_buff** %14, align 8
  %85 = load i8*, i8** %15, align 8
  %86 = call i32 @genlmsg_cancel(%struct.sk_buff* %84, i8* %85)
  %87 = load i32, i32* @EMSGSIZE, align 4
  %88 = sub nsw i32 0, %87
  store i32 %88, i32* %16, align 4
  br label %89

89:                                               ; preds = %83, %31
  %90 = load %struct.sk_buff*, %struct.sk_buff** %14, align 8
  %91 = call i32 @nlmsg_free(%struct.sk_buff* %90)
  %92 = load i32, i32* %16, align 4
  store i32 %92, i32* %7, align 4
  br label %93

93:                                               ; preds = %89, %71, %22
  %94 = load i32, i32* %7, align 4
  ret i32 %94
}

declare dso_local %struct.sk_buff* @nlmsg_new(i32, i32) #1

declare dso_local i8* @genlmsg_put(%struct.sk_buff*, i32, i32, i32*, i32, i32) #1

declare dso_local i64 @nla_put_u32(%struct.sk_buff*, i32, i32) #1

declare dso_local i64 @nla_put_u64_64bit(%struct.sk_buff*, i32, i32, i32) #1

declare dso_local i64 @nla_put_u8(%struct.sk_buff*, i32, i32) #1

declare dso_local i64 @nla_put(%struct.sk_buff*, i32, i32, i32*) #1

declare dso_local i32 @genlmsg_end(%struct.sk_buff*, i8*) #1

declare dso_local i32 @genlmsg_multicast_netns(i32*, i32, %struct.sk_buff*, i32, i32, i32) #1

declare dso_local i32 @dev_net(i32) #1

declare dso_local i32 @genlmsg_cancel(%struct.sk_buff*, i8*) #1

declare dso_local i32 @nlmsg_free(%struct.sk_buff*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
